# monstera

./: .gitignore  CMakeLists.txt  README.md
doc/: pico.md  robot_design.md  ros_test_pkg.md  workspace_setup.md
doc/component/: hello_micro.md
doc/departments/: control.md  electrical.md  mechanical.md  software.md
src/blinky/: CMakeLists.txt  blinky.md  package.xml
src/blinky/src/: blinky.cpp
src/hello/: CMakeLists.txt  hello.c  hello.md
src/hello_micro/: CMakeLists.txt  package.xml
src/hello_micro/src/hello/: CMakeLists.txt
src/monstera_motor_controller/: CMakeLists.txt  monstera_motor_controllerConfig.cmake.in  monstera_motor_controllerConfigVersion.cmake.in  package.xml
src/monstera_motor_controller/src/: CMakeLists.txt  motor_controller.c
src/ros_test_pkg/: CMakeLists.txt  package.xml  ros_test_pkg.md
src/ros_test_pkg/launch/: test_launch.py  test_launch.xml
src/ros_test_pkg/src/: my_node.cpp
src/ros_test_pkg/urdf/: test_bot.urdf
